--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div style="width: 100%">
         <img
           class="float-in"
-          src="images/New Project (3).png"
+          src="New Project (3).png"
           alt="My image"
           style="width: 220px; margin: auto"
         />
@@ -69,7 +69,7 @@
       <div class="d-Y">
         <img
           class="Y"
-          src="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+          src="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
           alt="Y symbol"
         />
       </div>
