--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+      href="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
