--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
       <h3>2- Having a nice and clear web menu.</h3>
       <br />
       <h3>
-        3- Adding special features to your menu. Like a specialized custom game
-        for your restaurant.
+        3- Adding special features Like a game to your menu.
       </h3>
     </div>
     <hr style="width: 100%; border: none" />
