--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="sam_con" class="float-in" style="width: fit-content">
       <p class="sam_con-p">
         <!-- <a href="" class="sam_con-a">samples</a> -->
-        <a href="https://wa.me/97632399" target="_blank" class="sam_con-a"
+        <a href="https://wa.me/+96550018618" target="_blank" class="sam_con-a"
           >contact</a
         >
       </p>
