--- a/index ar.html
+++ b/index ar.html
@@ -14,7 +14,7 @@
   <body>
     <div class="solver">
       <p class="sam_con-p">
-        <a href="https://wa.me/97632399" target="_blank" class="sam_con-a"
+        <a href="https://wa.me/+96550018618" target="_blank" class="sam_con-a"
           >التواصل</a
         >
         <!-- <a href="" class="sam_con-a">عينات</a> -->
