--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light">
     <link
       rel="shortcut icon"
       href="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
