--- a/index 1.html
+++ b/index 1.html
@@ -84,7 +84,7 @@
     <div style="margin: auto">
       <img
         style="width: 300px"
-        src="images/ChatGPT Image Jul 25, 2025, 08_08_22 PM.png"
+        src="ChatGPT Image Jul 25, 2025, 08_08_22 PM.png"
         alt="restaurant logo"
       />
       <br />
