--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="light">
+    <meta name="color-scheme" content="light" />
     <link
       rel="shortcut icon"
-      href="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+      href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
@@ -21,10 +21,10 @@
 
     <div class="sam_con" class="float-in" style="width: fit-content">
       <p class="sam_con-p">
-        <!-- <a href="" class="sam_con-a">samples</a> -->
         <a href="https://wa.me/+96550018618" target="_blank" class="sam_con-a"
           >contact</a
         >
+        <a href="index 1.html" class="sam_con-a">Clients</a>
       </p>
     </div>
 
@@ -34,7 +34,7 @@
       <div style="width: 100%">
         <img
           class="float-in"
-          src="New Project (3).png"
+          src="images/New Project (3).png"
           alt="My image"
           style="width: 220px; margin: auto"
         />
@@ -58,9 +58,7 @@
       <br />
       <h3>2- Having a nice and clear web menu.</h3>
       <br />
-      <h3>
-        3- Adding special features Like a game to your menu.
-      </h3>
+      <h3>3- Adding special features Like a game to your menu.</h3>
     </div>
     <hr style="width: 100%; border: none" />
     <hr style="width: 100%; border: none" />
@@ -69,7 +67,7 @@
       <div class="d-Y">
         <img
           class="Y"
-          src="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+          src="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
           alt="Y symbol"
         />
       </div>
