--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="light" />
+    <meta name="color-scheme" content="light">
     <link
       rel="shortcut icon"
       href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="style.css" />
-    <title>Personal website</title>
+    <link rel="stylesheet" href="style ar.css" />
+    <title>موقعي الشخصي</title>
   </head>
   <body>
-    <div style="width: fit-content">
-      <p class="p-lang">
-        <a href="index ar.html" class="a-lang">العربية</a>
-      </p>
-    </div>
-
-    <div class="sam_con" class="float-in" style="width: fit-content">
+    <div class="solver">
       <p class="sam_con-p">
         <a href="https://wa.me/+96550018618" target="_blank" class="sam_con-a"
-          >contact</a
+          >التواصل</a
         >
-        <a href="index 1.html" class="sam_con-a">Clients</a>
+        <a href="index 1ar.html" class="sam_con-a">العملاء</a>
       </p>
+
+      <div style="width: fit-content">
+        <p class="p-lang">
+          <a href="index.html" class="a-lang">English</a>
+        </p>
+      </div>
     </div>
 
     <div style="width: 100%"></div>
@@ -34,31 +34,31 @@
       <div style="width: 100%">
         <img
           class="float-in"
-          src="images/New Project (3).png"
+          src="images/New Project (4).png"
           alt="My image"
           style="width: 220px; margin: auto"
         />
       </div>
       <div class="name">
-        <h1><em>Yousef</em><br /><em>Alqattan</em></h1>
+        <h1>يوسف القطان</h1>
       </div>
     </div>
     <div class="introduction">
-      <h2>Who is Yousef Alqattan?</h2>
+      <h2>من هو يوسف القطان؟</h2>
       <p>
-        I'm a web developer specialized in developing restaurant menus in a
-        website via QR codes. I have over a year of programming experience, have
-        taken part in several AI and tech competitions, and earned a programming
-        certificate from the Kuwait Codes training course.
+        أنا مطوّر مواقع متخصص في تصميم قوائم طعام (منيو) في موقع إلكتروني
+        للمطاعم بحيث يعرض عبر QR Code، أملك خبرة تزيد عن سنة في البرمجة، وشاركت
+        في عدة مسابقات تقنية تتعلق بالتكنولوجيا والذكاء الاصطناعي، كما حصلت على
+        شهادة من دورة "الكويت تبرمج" في مجال البرمجة وتطوير المواقع.
       </p>
       <br />
-      <h2>Why bother working with me?</h2>
+      <h2>لماذا عليك اختياري للعمل معك؟</h2>
       <br />
-      <h3>1- I offer a minimal charge ranging between (10-20) KD.</h3>
+      <h3>١- أقدم سعر رمزي يتراوح بين (10-20) دينار كويتي.</h3>
       <br />
-      <h3>2- Having a nice and clear web menu.</h3>
+      <h3>٢ - الحصول على منيو جميل وواضح.</h3>
       <br />
-      <h3>3- Adding special features Like a game to your menu.</h3>
+      <h3>٣- إضافة ميزات خاصة للمنيو، مثل لعبة خاصة بالمطعم.</h3>
     </div>
     <hr style="width: 100%; border: none" />
     <hr style="width: 100%; border: none" />
@@ -73,10 +73,8 @@
       </div>
       <div class="the-word">
         <h2>
-          <em
-            >"Let's work together <br />
-            to make your restaurant better"</em
-          >
+          "منيو يشرح الخاطر،<br />
+          ويخلي الزبون دايم حاضر"
         </h2>
       </div>
     </div>
