--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       rel="shortcut icon"
       href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
-      type="image/x-icon"
+      type="x-icon"
     />
     <link rel="stylesheet" href="style ar.css" />
     <title>موقعي الشخصي</title>
