--- a/index 1ar.html
+++ b/index 1ar.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
-      type="image/x-icon"
+      href="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+      type="x-icon"
     />
     <title>Personal website</title>
     <style>
