--- a/index ar.html
+++ b/index ar.html
@@ -18,7 +18,7 @@
         <a href="https://wa.me/+96550018618" target="_blank" class="sam_con-a"
           >التواصل</a
         >
-        <!-- <a href="" class="sam_con-a">عينات</a> -->
+        <a href="index1 ar.html" class="sam_con-a">العملاء</a>
       </p>
 
       <div style="width: fit-content">
