--- a/index1 ar.html
+++ b/index1 ar.html
@@ -107,4 +107,28 @@
       >
     </div>
   </body>
+  <script>
+  function fixArabicButtonText() {
+    document.querySelectorAll('.auto-center').forEach(btn => {
+      const text = btn.textContent.trim();
+      const span = document.createElement('span');
+      span.textContent = text;
+      span.style.visibility = 'hidden';
+      span.style.whiteSpace = 'nowrap';
+      btn.appendChild(span);
+
+      const textHeight = span.offsetHeight;
+      btn.removeChild(span);
+
+      const btnHeight = btn.offsetHeight;
+      const offset = (btnHeight - textHeight) / 2;
+      btn.style.paddingTop = offset + 'px';
+      btn.style.paddingBottom = offset + 'px';
+    });
+  }
+
+  // تأكد من استدعائها بعد تحميل الصفحة
+  window.addEventListener('load', fixArabicButtonText);
+  window.addEventListener('resize', fixArabicButtonText);
+</script>
 </html>
