--- a/index1.html
+++ b/index1.html
@@ -83,7 +83,7 @@
     <br /><br />
     <div style="margin: auto">
       <img
-        style="width: 300px"
+        style="width: 280px;"
         src="ChatGPT Image Jul 25, 2025, 08_08_22 PM.png"
         alt="restaurant logo"
       />
@@ -101,5 +101,28 @@
         >Open</a
       >
     </div>
+    <br /><br />
+    <!-- سنجاب -->
+    <div style="margin: auto">
+      <img
+        style="width: 280px; background-color: #004c9b;"
+        src="SENJAP LOGO (2).png"
+        alt="restaurant logo"
+      />
+      <br />
+      <br />
+      <p style="width: fit-content; -webkit-text-stroke: #303841 0.6px">
+        Senjap
+      </p>
+      <br /><br />
+      <a
+        style="margin: auto; border-radius: 30px; background-color: #e9e7e7"
+        class="back-btn"
+        href="https://g57890.github.io/senjap/"
+        target="_blank"
+        >Open</a
+      >
+    </div>
   </body>
 </html>
+
