--- a/index1 ar.html
+++ b/index1 ar.html
@@ -88,7 +88,7 @@
     <br /><br />
     <div style="margin: auto">
       <img
-        style="width: 300px"
+        style="width: 280px;"
         src="ChatGPT Image Jul 25, 2025, 08_08_22 PM.png"
         alt="restaurant logo"
       />
@@ -102,6 +102,34 @@
         style="margin: auto; border-radius: 20px; background-color: #e4e4e4; font-size: 30px; width: 42px;"
         class="back-btn"
         href="https://g57890.github.io/-/"
+        target="_blank"
+        >فتح</a
+      >
+    </div>
+    <br /><br />
+    <!-- سنجاب -->
+    <div style="margin: auto">
+      <img
+        style="width: 280px; background-color: #004c9b;"
+        src="SENJAP LOGO (2).png"
+        alt="restaurant logo"
+      />
+      <br />
+      <br />
+      <p style="width: fit-content; -webkit-text-stroke: #303841 0.6px">
+        سنجاب
+      </p>
+      <br /><br />
+      <a
+        style="
+          margin: auto;
+          border-radius: 20px;
+          background-color: #e4e4e4;
+          font-size: 30px;
+          width: 42px;
+        "
+        class="back-btn"
+        href="https://g57890.github.io/senjap/"
         target="_blank"
         >فتح</a
       >
@@ -132,3 +160,4 @@
   window.addEventListener('resize', fixArabicButtonText);
 </script>
 </html>
+
