Revise index.html with new content and images
Updated content and images in the personal website.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="color-scheme" content="light" />
     <link
       rel="shortcut icon"
-      href="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
-      type="x-icon"
+      href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+      type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
     <title>Personal website</title>
@@ -34,7 +34,7 @@
       <div style="width: 100%">
         <img
           class="float-in"
-          src="New Project (3).png"
+          src="images/New Project (4).png"
           alt="My image"
           style="width: 220px; margin: auto"
         />
@@ -46,19 +46,23 @@
     <div class="introduction">
       <h2>Who is Yousef Alqattan?</h2>
       <p>
-        I'm a web developer specialized in developing restaurant menus in a
-        website via QR codes. I have over a year of programming experience, have
-        taken part in several AI and tech competitions, and earned a programming
-        certificate from the Kuwait Codes training course.
+        I'm a web developer specialized in designing restaurant menus as a
+        website or PDF via QR codes. I have over two years of programming
+        experience, have taken part in several AI and tech competitions, and
+        earned multiple certificates from "Kuwait Codes" in programming and web
+        development.
       </p>
       <br />
-      <h2>Why bother working with me?</h2>
+      <h2>Why choose me to work with you?</h2>
       <br />
-      <h3>1- I offer a minimal charge ranging between (10-20) KD.</h3>
+      <h3>1- My system purchases the right to use instead of subscribing.</h3>
       <br />
-      <h3>2- Having a nice and clear web menu.</h3>
+      <h3>2- I offer a nominal price ranging between (20-25) KD.</h3>
       <br />
-      <h3>3- Adding special features Like a game to your menu.</h3>
+      <h3>3- Getting a beautiful and clear menu.</h3>
+      <br />
+      <h3>4- Adding special features to the menu, like a game.</h3>
+      <br />
     </div>
     <hr style="width: 100%; border: none" />
     <hr style="width: 100%; border: none" />
@@ -67,7 +71,7 @@
       <div class="d-Y">
         <img
           class="Y"
-          src="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+          src="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
           alt="Y symbol"
         />
       </div>
@@ -92,3 +96,4 @@
     });
   </script>
 </html>
+
