Fix image paths and enhance link structure
Updated image paths and added links to images.

--- a/index1.html
+++ b/index1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
-      type="x-icon"
+      href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+      type="image/x-icon"
     />
     <title>Personal website</title>
     <style>
@@ -81,50 +81,44 @@
   <body>
     <a class="back-btn" href="index.html">Back</a>
     <br /><br />
+    
     <div style="margin: auto">
-      <img
-        style="width: 280px;"
-        src="ChatGPT Image Jul 25, 2025, 08_08_22 PM.png"
-        alt="restaurant logo"
-      />
-      <br />
-      <br />
-      <p style="width: fit-content; -webkit-text-stroke: #303841 0.6px">
-        Mo Mataam Hendi
-      </p>
+      <a href="https://g57890.github.io/-/" target="_blank" style="text-decoration: none;">
+        <img
+          style="width: 280px;"
+          src="images/ChatGPT Image Jul 25, 2025, 08_08_22 PM.png"
+          alt="restaurant logo"
+        />
+        <br />
+        <br />
+        <p style="width: fit-content; -webkit-text-stroke: #303841 0.6px">
+          Mo Mataam Hendi
+        </p>
+      </a>
       <br /><br />
-      <a
-        style="margin: auto; border-radius: 30px; background-color: #e9e7e7"
-        class="back-btn"
-        href="https://g57890.github.io/-/"
-        target="_blank"
-        >Open</a
-      >
     </div>
+
     <br /><br />
-    <!-- سنجاب -->
+
     <div style="margin: auto">
-      <img
-        style="width: 280px; background-color: #004c9b;"
-        src="SENJAP LOGO (2).png"
-        alt="restaurant logo"
-      />
-      <br />
-      <br />
-      <p style="width: fit-content; -webkit-text-stroke: #303841 0.6px">
-        Senjap
-      </p>
+      <a href="https://g57890.github.io/senjap/" target="_blank" style="text-decoration: none;">
+        <img
+          style="width: 280px; background-color: #004c9b;"
+          src="SENJAP LOGO (2).png"
+          alt="restaurant logo"
+        />
+        <br />
+        <br />
+        <p style="width: fit-content; -webkit-text-stroke: #303841 0.6px">
+          Senjap
+        </p>
+      </a>
       <br /><br />
-      <a
-        style="margin: auto; border-radius: 30px; background-color: #e9e7e7"
-        class="back-btn"
-        href="https://g57890.github.io/senjap/"
-        target="_blank"
-        >Open</a
-      >
     </div>
     <br /><br />
   </body>
 </html>
+
+
 
 
