Revise index ar.html with new content and image links
Updated content and image paths in the Arabic index file.

--- a/index ar.html
+++ b/index ar.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="light">
+    <meta name="color-scheme" content="light" />
     <link
       rel="shortcut icon"
-      href="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
-      type="x-icon"
+      href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+      type="image/x-icon"
     />
     <link rel="stylesheet" href="style ar.css" />
     <title>موقعي الشخصي</title>
@@ -34,7 +34,7 @@
       <div style="width: 100%">
         <img
           class="float-in"
-          src="New Project (4).png"
+          src="images/New Project (4).png"
           alt="My image"
           style="width: 220px; margin: auto"
         />
@@ -46,19 +46,22 @@
     <div class="introduction">
       <h2>من هو يوسف القطان؟</h2>
       <p>
-        أنا مطوّر مواقع متخصص في تصميم قوائم طعام (منيو) في موقع إلكتروني
-        للمطاعم بحيث يعرض عبر QR Code، أملك خبرة تزيد عن سنة في البرمجة، وشاركت
+        أنا مطوّر مواقع متخصص في تصميم قوائم طعام (منيو) في موقع إلكتروني أو PDF
+        للمطاعم بحيث يعرض عبر QR Code، أملك خبرة تزيد عن سنتين في البرمجة، وشاركت
         في عدة مسابقات تقنية تتعلق بالتكنولوجيا والذكاء الاصطناعي، كما حصلت على
-        شهادة من دورة "الكويت تبرمج" في مجال البرمجة وتطوير المواقع.
+        العديد من الشهادات من "الكويت تبرمج" في مجال البرمجة وتطوير المواقع.
       </p>
       <br />
       <h2>لماذا عليك اختياري للعمل معك؟</h2>
       <br />
-      <h3>١- أقدم سعر رمزي يتراوح بين (10-20) دينار كويتي.</h3>
+      <h3>١- نظامي شراء (حق استخدام الموقع) وليس اشتراك.</h3>
       <br />
-      <h3>٢ - الحصول على منيو جميل وواضح.</h3>
+      <h3>٢- أقدم سعر رمزي يتراوح بين (20-25) دينار كويتي.</h3>
       <br />
-      <h3>٣- إضافة ميزات خاصة للمنيو، مثل لعبة خاصة بالمطعم.</h3>
+      <h3>٣ - الحصول على منيو جميل وواضح.</h3>
+      <br />
+      <h3>٤- إضافة ميزات خاصة للمنيو، مثل لعبة خاصة بالمطعم.</h3>
+      <br />
     </div>
     <hr style="width: 100%; border: none" />
     <hr style="width: 100%; border: none" />
@@ -67,7 +70,7 @@
       <div class="d-Y">
         <img
           class="Y"
-          src="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+          src="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
           alt="Y symbol"
         />
       </div>
@@ -90,3 +93,5 @@
     });
   </script>
 </html>
+
+
