--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="color-scheme" content="light" />
     <link
       rel="shortcut icon"
-      href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+      href="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
@@ -71,7 +71,7 @@
       <div class="d-Y">
         <img
           class="Y"
-          src="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+          src="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
           alt="Y symbol"
         />
       </div>
@@ -96,4 +96,5 @@
     });
   </script>
 </html>
+
 
