--- a/index1.html
+++ b/index1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+      href="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
       type="image/x-icon"
     />
     <title>Personal website</title>
@@ -86,7 +86,7 @@
       <a href="https://g57890.github.io/-/" target="_blank" style="text-decoration: none;">
         <img
           style="width: 280px;"
-          src="images/ChatGPT Image Jul 25, 2025, 08_08_22 PM.png"
+          src="ChatGPT Image Jul 25, 2025, 08_08_22 PM.png"
           alt="restaurant logo"
         />
         <br />
@@ -118,6 +118,7 @@
     <br /><br />
   </body>
 </html>
+
 
 
 
