--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div style="width: 100%">
         <img
           class="float-in"
-          src="images/New Project (4).png"
+          src="New Project (4).png"
           alt="My image"
           style="width: 220px; margin: auto"
         />
@@ -96,5 +96,6 @@
     });
   </script>
 </html>
+
 
 
