Fix HTML structure and update image paths

--- a/index ar.html
+++ b/index ar.html
@@ -6,7 +6,7 @@
     <meta name="color-scheme" content="light" />
     <link
       rel="shortcut icon"
-      href="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+      href="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style ar.css" />
@@ -34,7 +34,7 @@
       <div style="width: 100%">
         <img
           class="float-in"
-          src="images/New Project (4).png"
+          src="New Project (4).png"
           alt="My image"
           style="width: 220px; margin: auto"
         />
@@ -70,7 +70,7 @@
       <div class="d-Y">
         <img
           class="Y"
-          src="images/ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
+          src="ChatGPT Image Jun 28, 2025, 06_12_44 PM (1).png"
           alt="Y symbol"
         />
       </div>
@@ -93,5 +93,6 @@
     });
   </script>
 </html>
+
 
 
