Revise index.html for content and structure
Updated the content and formatting of the personal website.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <div class="introduction">
       <h2>Who is Yousef Alqattan?</h2>
       <p>
-        I'm a web developer specialized in designing restaurant menus as a
-        website or PDF via QR codes. I have over two years of programming
+        I'm a web developer specialized in creating restaurant menus for websites or PDFs accessed via QR codes. I have over two years of programming
         experience, have taken part in several AI and tech competitions, and
         earned multiple certificates from "Kuwait Codes" in programming and web
         development.
@@ -96,6 +95,7 @@
     });
   </script>
 </html>
+
 
 
 
